--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="app-main">
-    <div class="app-container"></div>
+    <div class="app-container">
+        <app-header></app-header>
+        <app-body></app-body>
+        <app-footer></app-footer>
+    </div>
 </div>
