--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import "~owl-ng/assets/style/theme.min.css";
 @import "sass/main";
+
+.alarm-box-checkbox {
+  .owl-chkbox-label-content {
+    margin-left: 0;
+  }
+}
