Added alarm model

--- a/src/app/alarm-box/alarm-box.component.html
+++ b/src/app/alarm-box/alarm-box.component.html
@@ -2,7 +2,7 @@
     <span class="alarm-box-indicator alarm-box-indicator-night"></span>
 </div>
 <div class="alarm-box-column alarm-box-column-inform">
-    <span class="alarm-box-inform-time">9:30</span>
+    <span class="alarm-box-inform-time">{{alarm.hour}}:{{alarm.minute}}</span>
     <span class="alarm-box-inform-days">
 
         <!-- Sunday -->
