--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,9 +1,1 @@
-<app-alarm-box></app-alarm-box>
-<app-alarm-box></app-alarm-box>
-<app-alarm-box></app-alarm-box>
-<app-alarm-box></app-alarm-box>
-<app-alarm-box></app-alarm-box>
-<app-alarm-box></app-alarm-box>
-<app-alarm-box></app-alarm-box>
-<app-alarm-box></app-alarm-box>
-<app-alarm-box></app-alarm-box>
+<app-alarm-box *ngFor="let alarm of alarms" [alarm]="alarm"></app-alarm-box>
