--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-main">
     <div class="app-container">
         <app-header></app-header>
-        <app-body [alarms]="alarms"></app-body>
+        <app-body></app-body>
         <app-footer></app-footer>
     </div>
 </div>
