--- a/src/app/alarm-settings/alarm-settings.component.scss
+++ b/src/app/alarm-settings/alarm-settings.component.scss
@@ -1,13 +1,105 @@
 :host {
   display: flex;
   justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100%;
 }
 
 .alarm-settings-inner {
   width: 85%;
-  height: 85%;
-  background-color: #E68D52;
+  height: 100%;
+
+  .title {
+    width: 100%;
+    padding: .8rem;
+    border-radius: 4px 4px 0 0;
+    color: rgba(0, 0, 0, 0.4);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    position: relative;
+    font-size: 1.2rem;
+    box-sizing: border-box;
+  }
+}
+
+.frequency-block {
+
+  margin-bottom: 1rem;
+
+  .title {
+    background: linear-gradient(to right, #93dccc, #9cd2f9);
+  }
+
+  .days {
+    background-color: #6b6ec5;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 5rem;
+    width: 100%;
+  }
+}
+
+.time-block {
+
+  margin-bottom: 1.5rem;
+
+  .title {
+    background: linear-gradient(to right, #fed1a7, #feeca8);
+  }
+
+  .time {
+    background-color: #6b6ec5;
+    color: #FFFFFF;
+    font-size: 2rem;
+    padding: 5px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+
+    .hours,
+    .minutes,
+    .dividers {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .dividers {
+      margin: 0 .5rem;
+    }
+  }
+}
+
+.time-control-btn {
+  outline: none;
+  border: none;
+  background: none;
+  padding: 0;
+  color: inherit;
+  cursor: pointer;
+
+  &:hover {
+    opacity: .6;
+  }
+}
+
+.saving-btn {
+  color: #fff;
+  background-color: #4c6ea5;
+  bottom: 30px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 30px;
+  padding: 10px 60px;
+  cursor: pointer;
+  transition: all 0.3s linear;
+  outline: none;
+  border: 1px #46578c solid;
+
+  &:hover {
+    color: #4c6ea5;
+    background-color: #FFFFFF;
+  }
 }
