--- a/src/app/alarm-box/alarm-box.component.scss
+++ b/src/app/alarm-box/alarm-box.component.scss
@@ -82,3 +82,20 @@
   width: 50px;
   padding: 0 1rem 2rem;
 }
+
+.alarm-box-checkbox {
+  color: rgba(96, 96, 96, .4);
+  user-select: none;
+
+  &.checkbox-on {
+    color: rgb(84, 84, 84);
+  }
+
+  &.sun, &.sat {
+    color: rgba(255, 28, 55, .4);
+
+    &.checkbox-on {
+      color: rgba(255, 28, 55, 1);
+    }
+  }
+}
