--- a/src/app/alarm-settings/alarm-settings.component.html
+++ b/src/app/alarm-settings/alarm-settings.component.html
@@ -4,7 +4,7 @@
         <div class="days">
             <!-- Sunday -->
             <owl-check-box [binary]="false"
-                           class="settings-checkbox"
+                           class="settings-checkbox sun"
                            [ngClass]="{'checkbox-on': chkBox0.checked}"
                            [value]="0" #chkBox0="owlCheckBox">
                 <owl-check-box-toggle>Sun</owl-check-box-toggle>
@@ -12,7 +12,7 @@
 
             <!-- Monday -->
             <owl-check-box [binary]="false"
-                           class="settings-checkbox"
+                           class="settings-checkbox mon"
                            [ngClass]="{'checkbox-on': chkBox1.checked}"
                            [value]="1" #chkBox1="owlCheckBox">
                 <owl-check-box-toggle>Mon</owl-check-box-toggle>
@@ -20,7 +20,7 @@
 
             <!-- Tuesday -->
             <owl-check-box [binary]="false"
-                           class="settings-checkbox"
+                           class="settings-checkbox tue"
                            [ngClass]="{'checkbox-on': chkBox2.checked}"
                            [value]="2" #chkBox2="owlCheckBox">
                 <owl-check-box-toggle>Tue</owl-check-box-toggle>
@@ -28,7 +28,7 @@
 
             <!-- Wednesday -->
             <owl-check-box [binary]="false"
-                           class="settings-checkbox"
+                           class="settings-checkbox wed"
                            [ngClass]="{'checkbox-on': chkBox3.checked}"
                            [value]="3" #chkBox3="owlCheckBox">
                 <owl-check-box-toggle>Wed</owl-check-box-toggle>
@@ -36,7 +36,7 @@
 
             <!-- Thursday -->
             <owl-check-box [binary]="false"
-                           class="settings-checkbox"
+                           class="settings-checkbox thu"
                            [ngClass]="{'checkbox-on': chkBox4.checked}"
                            [value]="4" #chkBox4="owlCheckBox">
                 <owl-check-box-toggle>Thu</owl-check-box-toggle>
@@ -44,7 +44,7 @@
 
             <!-- Friday -->
             <owl-check-box [binary]="false"
-                           class="settings-checkbox"
+                           class="settings-checkbox fri"
                            [ngClass]="{'checkbox-on': chkBox5.checked}"
                            [value]="5" #chkBox5="owlCheckBox">
                 <owl-check-box-toggle>Fri</owl-check-box-toggle>
@@ -52,7 +52,7 @@
 
             <!-- Saturday -->
             <owl-check-box [binary]="false"
-                           class="settings-checkbox"
+                           class="settings-checkbox sat"
                            [ngClass]="{'checkbox-on': chkBox6.checked}"
                            [value]="6" #chkBox6="owlCheckBox">
                 <owl-check-box-toggle>Sat</owl-check-box-toggle>
