--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="app-main">
     <div class="app-container">
         <app-header [clock]="clock$ | async"></app-header>
-        <app-body [(isConfigSettings)]="isConfigSettings"></app-body>
+        <app-body [alarms]="alarms$ | async"
+                  [(isConfigSettings)]="isConfigSettings"></app-body>
         <app-footer [(isConfigSettings)]="isConfigSettings"></app-footer>
     </div>
 </div>
