Updated alarm settings

--- a/src/app/alarm-settings/alarm-settings.component.scss
+++ b/src/app/alarm-settings/alarm-settings.component.scss
@@ -79,7 +79,12 @@
   color: inherit;
   cursor: pointer;
 
-  &:hover {
+  &:disabled {
+    opacity: .4;
+    cursor: default;
+  }
+
+  &:not([disabled]):hover {
     opacity: .6;
   }
 }
