--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,4 +1,5 @@
 <app-alarm-settings *ngIf="isConfigSettings;else alarmList"
+                    (update)="handleAlarmSettingsUpdate($event)"
                     (save)="handleAlarmSettingsSave($event)"></app-alarm-settings>
 
 <ng-template #alarmList>
