--- a/src/app/alarm-settings/alarm-settings.component.html
+++ b/src/app/alarm-settings/alarm-settings.component.html
@@ -6,6 +6,7 @@
             <owl-check-box [binary]="false"
                            class="settings-checkbox sun"
                            [ngClass]="{'checkbox-on': chkBox0.checked}"
+                           [(ngModel)]="days"
                            [value]="0" #chkBox0="owlCheckBox">
                 <owl-check-box-toggle>Sun</owl-check-box-toggle>
             </owl-check-box>
@@ -14,6 +15,7 @@
             <owl-check-box [binary]="false"
                            class="settings-checkbox mon"
                            [ngClass]="{'checkbox-on': chkBox1.checked}"
+                           [(ngModel)]="days"
                            [value]="1" #chkBox1="owlCheckBox">
                 <owl-check-box-toggle>Mon</owl-check-box-toggle>
             </owl-check-box>
@@ -22,6 +24,7 @@
             <owl-check-box [binary]="false"
                            class="settings-checkbox tue"
                            [ngClass]="{'checkbox-on': chkBox2.checked}"
+                           [(ngModel)]="days"
                            [value]="2" #chkBox2="owlCheckBox">
                 <owl-check-box-toggle>Tue</owl-check-box-toggle>
             </owl-check-box>
@@ -30,6 +33,7 @@
             <owl-check-box [binary]="false"
                            class="settings-checkbox wed"
                            [ngClass]="{'checkbox-on': chkBox3.checked}"
+                           [(ngModel)]="days"
                            [value]="3" #chkBox3="owlCheckBox">
                 <owl-check-box-toggle>Wed</owl-check-box-toggle>
             </owl-check-box>
@@ -38,6 +42,7 @@
             <owl-check-box [binary]="false"
                            class="settings-checkbox thu"
                            [ngClass]="{'checkbox-on': chkBox4.checked}"
+                           [(ngModel)]="days"
                            [value]="4" #chkBox4="owlCheckBox">
                 <owl-check-box-toggle>Thu</owl-check-box-toggle>
             </owl-check-box>
@@ -46,6 +51,7 @@
             <owl-check-box [binary]="false"
                            class="settings-checkbox fri"
                            [ngClass]="{'checkbox-on': chkBox5.checked}"
+                           [(ngModel)]="days"
                            [value]="5" #chkBox5="owlCheckBox">
                 <owl-check-box-toggle>Fri</owl-check-box-toggle>
             </owl-check-box>
@@ -54,6 +60,7 @@
             <owl-check-box [binary]="false"
                            class="settings-checkbox sat"
                            [ngClass]="{'checkbox-on': chkBox6.checked}"
+                           [(ngModel)]="days"
                            [value]="6" #chkBox6="owlCheckBox">
                 <owl-check-box-toggle>Sat</owl-check-box-toggle>
             </owl-check-box>
@@ -66,12 +73,14 @@
             <div class="hours">
                 <button type="button"
                         class="time-control-btn"
+                        [disabled]="!canIncreaseHour"
                         (click)="handleHoursUp($event)">
                     <i class="fas fa-caret-up"></i>
                 </button>
-                <span class="value">{{hours | doubleDigits}}</span>
+                <span class="value">{{hour | doubleDigits}}</span>
                 <button type="button"
                         class="time-control-btn"
+                        [disabled]="!canDecreaseHour"
                         (click)="handleHoursDown($event)">
                     <i class="fas fa-caret-down"></i>
                 </button>
@@ -80,12 +89,14 @@
             <div class="minutes">
                 <button type="button"
                         class="time-control-btn"
+                        [disabled]="!canIncreaseMinute"
                         (click)="handleMinutesUp($event)">
                     <i class="fas fa-caret-up"></i>
                 </button>
-                <span class="value">{{minutes | doubleDigits}}</span>
+                <span class="value">{{minute | doubleDigits}}</span>
                 <button type="button"
                         class="time-control-btn"
+                        [disabled]="!canDecreaseMinute"
                         (click)="handleMinutesDown($event)">
                     <i class="fas fa-caret-down"></i>
                 </button>
