--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,7 +1,13 @@
 <app-alarm-settings *ngIf="isConfigSettings;else alarmList"
-                    (update)="handleAlarmSettingsUpdate($event)"
-                    (save)="handleAlarmSettingsSave($event)"></app-alarm-settings>
+                    [alarmId]="alarmOnConfig?.id"
+                    [alarmHour]="alarmOnConfig?.hour"
+                    [alarmMinute]="alarmOnConfig?.minute"
+                    [alarmDays]="alarmOnConfig?.days"
+                    (save)="handleAlarmSave($event)"
+                    (update)="handleAlarmUpdate($event)"
+                    (delete)="handleAlarmDelete($event)"></app-alarm-settings>
 
 <ng-template #alarmList>
-    <app-alarm-list [alarms]="alarms"></app-alarm-list>
+    <app-alarm-list [alarms]="alarms"
+                    (alarmClick)="handleAlarmClick($event)"></app-alarm-list>
 </ng-template>
