--- a/src/app/alarm-list/alarm-list.component.scss
+++ b/src/app/alarm-list/alarm-list.component.scss
@@ -1,6 +1,16 @@
 :host {
   display: block;
+  position: relative;
   width: 100%;
   height: 100%;
   overflow: auto;
+}
+
+.no-alarms {
+  position: absolute;
+  top: 40%;
+  width: 100%;
+  font-size: 1.2rem;
+  color: #565656;
+  text-align: center;
 }
