--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
 <div class="app-main">
     <div class="app-container">
         <app-header [clock]="clock$ | async"></app-header>
-        <app-body [alarms]="alarms$ | async"
-                  [(isConfigSettings)]="isConfigSettings"></app-body>
-        <app-footer [(isConfigSettings)]="isConfigSettings"></app-footer>
+        <ng-container *ngIf="isBellRinging;else bellBlock">
+            <app-alarm-bell></app-alarm-bell>
+        </ng-container>
+        <ng-template #bellBlock>
+            <app-body [alarms]="alarms$ | async"
+                      [(isConfigSettings)]="isConfigSettings"></app-body>
+            <app-footer [(isConfigSettings)]="isConfigSettings"></app-footer>
+        </ng-template>
     </div>
 </div>
