--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
 <div class="app-main">
     <div class="app-container">
-        <app-header [clock]="clock$ | async"></app-header>
+        <app-header class="app-header" [clock]="clock$ | async"></app-header>
         <ng-container *ngIf="isBellRinging;else bellBlock">
             <app-alarm-bell></app-alarm-bell>
         </ng-container>
         <ng-template #bellBlock>
-            <app-body [alarms]="alarms$ | async"
+            <app-body class="app-body"
+                      [alarms]="alarms$ | async"
                       [(isConfigSettings)]="isConfigSettings"></app-body>
-            <app-footer [(isConfigSettings)]="isConfigSettings"></app-footer>
+            <app-footer class="app-footer"
+                        [(isConfigSettings)]="isConfigSettings"></app-footer>
         </ng-template>
     </div>
 </div>
