--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,3 +44,15 @@
   background: #FFF;
   z-index: 1;
 }
+
+.app-alarm-bell-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  flex: 1;
+  overflow: hidden;
+  background: #FFF;
+  position: relative;
+  z-index: 0;
+}
